# rust-rest-api-poc

./: .env  .gitignore  Cargo.toml  README.md  postman.http
src/: main.rs
src/config/: mod.rs
src/models/: mod.rs  user.rs
src/routes/: mod.rs  users.rs
